# navicat-winmm-unlock

./: CMakeLists.txt  LICENSE  README.md  winmm.def
.github/workflows/: build.yml
include/: hooks.h
src/: dllmain.c  forward.c  hooks.c
